K8s Final Exam/broken_solution/broken/1-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: web
  namespace: web-ns
  labels:
    app: frontend #Service selector does NOT match your Pod labels
spec:
  containers:
    - name: nginx
      image: nginx
