K8s Final Exam/broken_solution/broken/3-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      nodeSelector:
        disk: ssd
      tolerations:
        - key: "critical"
          operator: "Exists" #Kubernetes only accepts these operator values (Wrong operator in tolerations)
          effect: "NoSchedule"
      containers:
        - name: api
          image: nginx
          readinessProbe:
            httpGet:
              path: /check
              port: 80
