K8s Final Exam/broken_solution/broken/7-daemonset.yml
# FIX: DaemonSet only exists in apps/v1. apps/v2 is invalid and will cause an error.
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: log-agent
spec:
  selector:
    matchLabels:
      app: logger
  template:
    metadata:
      labels:
        app: logger
    spec:
      containers:
        - name: agent
          image: busybox
          command: ["sh","-c","tail -f /var/log/messages"]
