K8s Final Exam/broken_solution/broken/1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-svc
  namespace: web-ns
spec:
  selector:
    app: frontend #Service selector does NOT match your Pod labels
  ports:
    - port: 80
      targetPort: 80
