K8s Final Exam/broken_solution/broken/4-service.yml
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  selector:
    app: db
  ports:
    - name: mysql
      port: 3306
      targetPort: 3306
